# zo

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  FRET_REFACTOR_PLAN.md  README.md  SECURiTY.md  justfile  lefthook.yml  llms.txt  rustfmt.toml  typos.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md
apps/: README.md
crates/: README.md
crates/booster/zhyr-booster/: Cargo.toml  README.md
crates/booster/zhyr-booster/src/: booster.rs  lib.rs  phase.rs
crates/booster/zhyr-booster/src/phase/: building.rs  generating.rs  parsing.rs  reading.rs
crates/booster/zhyr-codegen/: Cargo.toml  README.md
crates/booster/zhyr-codegen/src/: codegen.rs
crates/booster/zhyr-driver/: Cargo.toml  README.md
crates/booster/zhyr-driver/src/: cmd.rs  driver.rs
crates/booster/zhyr-driver/src/cmd/: boost.rs
crates/booster/zhyr-parser/: Cargo.toml  README.md
crates/booster/zhyr-parser-js/: Cargo.toml  README.md
crates/booster/zhyr-parser-js/src/: parser.rs
crates/booster/zhyr-parser/src/: parser.rs
crates/booster/zhyr-reader/: Cargo.toml  README.md
crates/booster/zhyr-reader/src/: reader.rs
crates/compiler-old/zo-analyzer/: Cargo.toml
crates/compiler-old/zo-analyzer/src/checker/: borrow.rs
crates/compiler-old/zo-codegen-llvm/: Cargo.toml
crates/compiler-old/zo-codegen-llvm/src/: lib.rs
crates/compiler-old/zo-compiler/: Cargo.toml
crates/compiler-old/zo-compiler/src/: compiler.rs  event.rs
crates/compiler-old/zo-compiler/src/phase/: tokenizing.rs
crates/compiler-old/zo-parser/: Cargo.toml
crates/compiler-old/zo-parser/src/: parser.rs
crates/compiler-rewrite/zo-tokenizer/: Cargo.toml
crates/compiler-rewrite/zo-tokenizer/benches/: tokenize.rs
crates/compiler-rewrite/zo-tokenizer/src/: cursor.rs  state.rs  tokenizer.rs
crates/compiler-rewrite/zo-tokenizer/src/state/: program.rs  style.rs  template.rs
crates/compiler-website/: Cargo.toml  README.md  db.json  extra.html  index.html
crates/compiler-website/pages/: examples.html  initiation.html  tricks.html
crates/compiler-website/src/: main.rs
crates/compiler/zhoo-analyzer/: Cargo.toml  README.md
crates/compiler/zhoo-analyzer/src/: analyzer.rs  lib.rs
crates/compiler/zhoo-ast/: Cargo.toml  README.md
crates/compiler/zhoo-ast/src/: ast.rs  pretty.rs
crates/compiler/zhoo-codegen/: Cargo.toml  README.md
crates/compiler/zhoo-codegen-clif/: Cargo.toml  README.md
crates/compiler/zhoo-codegen-clif/src/: builder.rs  clif.rs  codegen.rs  lib.rs  translator.rs
crates/compiler/zhoo-codegen-clif/src/builder/: data.rs  var.rs
crates/compiler/zhoo-codegen-cranelift/: Cargo.toml
crates/compiler/zhoo-codegen-cranelift/src/: codegen.rs  translator.rs
crates/compiler/zhoo-codegen-llvm/: Cargo.toml  README.md
crates/compiler/zhoo-codegen-llvm/src/: codegen.rs  lib.rs  translator.rs
crates/compiler/zhoo-codegen/src/: codegen.rs  ty.rs
crates/compiler/zhoo-compiler/: Cargo.toml  README.md
crates/compiler/zhoo-compiler/src/: compiler.rs  phase.rs
crates/compiler/zhoo-compiler/src/phase/: analyzing.rs  building.rs  generating.rs  interpreting.rs  linking.rs  parsing.rs  reading.rs  tokenizing.rs
crates/compiler/zhoo-driver/: Cargo.toml  README.md
crates/compiler/zhoo-driver/src/: cmd.rs  driver.rs  lib.rs
crates/compiler/zhoo-driver/src/cmd/: build.rs  check.rs  license.rs  print.rs  version.rs
crates/compiler/zhoo-inferencer/: Cargo.toml  README.md
crates/compiler/zhoo-inferencer/src/: inferencer.rs  lib.rs
crates/compiler/zhoo-interpreter/: Cargo.toml  README.md
crates/compiler/zhoo-interpreter-clif/: Cargo.toml  README.md
crates/compiler/zhoo-interpreter-clif/src/: interpreter.rs
crates/compiler/zhoo-interpreter/src/: interpreter.rs
crates/compiler/zhoo-parser/: Cargo.toml  README.md
crates/compiler/zhoo-parser/benches/: parse.rs
crates/compiler/zhoo-parser/data/: syntax.zo
crates/compiler/zhoo-parser/src/: lib.rs  parser.rs  precedence.rs  test.rs
crates/compiler/zhoo-reader/: Cargo.toml  README.md
crates/compiler/zhoo-reader/benches/: read.rs
crates/compiler/zhoo-reader/src/: lib.rs  reader.rs  test.rs
crates/compiler/zhoo-tokenizer/: Cargo.toml  README.md
crates/compiler/zhoo-tokenizer/benches/: tokenize.rs
crates/compiler/zhoo-tokenizer/src/: lib.rs  state.rs  test.rs  token.rs  tokenizer.rs
crates/compiler/zhoo-tokenizer/src/token/: comment.rs  group.rs  int.rs  kw.rs  op.rs  punctuation.rs
crates/compiler/zo-analyzer/: Cargo.toml  README.md
crates/compiler/zo-analyzer/benches/: analyze.rs
crates/compiler/zo-analyzer/src/: analyzer.rs  checker.rs  lib.rs
crates/compiler/zo-analyzer/src/checker/: name.rs
crates/compiler/zo-analyzer/src/tests/: common.rs  mod.rs  type_invariants.rs
crates/compiler/zo-ast/: Cargo.toml  README.md
crates/compiler/zo-ast/src/: ast.rs  ast_zsx.rs  lib.rs  pretty.rs
docs/: README.md  index.html
notes/: README.md  install.md  references.md
source/: README.md
sources/: README.md
sources/core/: Cargo.toml  README.md
sources/core/src/: buffer.rs  case.rs  color.rs  dsa.rs  fmt.rs  fs.rs  interner.rs  lib.rs  macros.rs  mpsc.rs  profiler.rs  reporter.rs  source.rs  span.rs  system.rs  timer.rs  writer.rs
sources/core/src/case/: charcase.rs  macros.rs  strcase.rs
sources/core/src/case/charcase/: endofcase.rs  groupcase.rs  identcase.rs  lowercase.rs  numbercase.rs  opcase.rs  punctuationcase.rs  quotecase.rs  spacecase.rs  uppercase.rs
sources/core/src/case/strcase/: camelcase.rs  kebabcase.rs  pascalcase.rs  pluralcase.rs  singularcase.rs  snakecase.rs  traincase.rs
sources/core/src/dsa/: node.rs  queue.rs  scope.rs  stack.rs
sources/core/src/interner/: symbol.rs
sources/core/src/mpsc/: channel.rs  receiver.rs  sender.rs
sources/core/src/profiler/: profile.rs
sources/core/src/reporter/: report.rs
sources/core/src/reporter/report/: assembly.rs  chan.rs  eval.rs  io.rs  lexical.rs  pasteboard.rs  semantic.rs  syntax.rs
sources/core/src/timer/: time.rs  unit.rs
tasks/: README.md  install-vscode.sh  install.sh  zo-install-vscode-plugin.sh  zo-install.sh
(+4960 files in other folders)
