[workspace]
members = [
  "sources/tweener/eazy",
  "sources/tweener/eazy-examples/*",
  "sources/crafter/swisskit",
  "sources/sitter/tree-sitter-zo",
  "crates/compiler/zo",
  "crates/compiler/zo-benches",
  "crates/packager/fret",
]

default-members = [
  "crates/compiler/zo",
  "crates/compiler/zo-benches",
  "crates/packager/fret",
]

exclude = [
  "/.github/*",
  ".todo.md",
]

resolver = '2'

[workspace.package]
authors = ["the compilords team"]
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/invisageable/zo"
version = "0.0.0"

[workspace.dependencies]
# internal:sources:swisskit.
swisskit = { path = "sources/crafter/swisskit", version = "0.0.0" }
swisskit-core = { path = "sources/crafter/swisskit-core", version = "0.0.0" }
swisskit-renderer = { path = "sources/crafter/swisskit-renderer", version = "0.0.0" }
swisskit-span = { path = "sources/crafter/swisskit-span", version = "0.0.0" }

# internal:sources:eazy.
eazy = { path = "sources/tweener/eazy", version = "0.0.2" }
# eazy-bevy = { path = "sources/tweener/eazy-bevy", version = "0.0.0" }
eazy-core = { path = "sources/tweener/eazy-core", version = "0.0.2" }
eazy-derive = { path = "sources/tweener/eazy-derive", version = "0.0.2" }
eazy-keyframe = { path = "sources/tweener/eazy-keyframe", version = "0.0.2" }
eazy-tweener = { path = "sources/tweener/eazy-tweener", version = "0.0.2" }
eazy-wasm = { path = "sources/tweener/eazy-wasm", version = "0.0.0" }

# internal:sources:sitter.
tree-sitter-zo = { path = "sources/sitter/tree-sitter-zo", version = "0.0.0" }

# internal:crates:zo.
zo = { path = "crates/compiler/zo", version = "0.0.0" }
zo-analyzer = { path = "crates/compiler/zo-analyzer", version = "0.0.0" }
zo-benches = { path = "crates/compiler/zo-benches", version = "0.0.0" }
zo-buffer = { path = "crates/compiler/zo-buffer", version = "0.0.0" }
zo-codegen = { path = "crates/compiler/zo-codegen", version = "0.0.0" }
zo-codegen-arm = { path = "crates/compiler/zo-codegen-arm", version = "0.0.0" }
zo-codegen-backend = { path = "crates/compiler/zo-codegen-backend", version = "0.0.0" }
zo-compiler = { path = "crates/compiler/zo-compiler", version = "0.0.0" }
zo-constant-folding = { path = "crates/compiler/zo-constant-folding", version = "0.0.0" }
zo-constant-propagation = { path = "crates/compiler/zo-constant-propagation", version = "0.0.0" }
zo-dce = { path = "crates/compiler/zo-dce", version = "0.0.0" }
zo-driver = { path = "crates/compiler/zo-driver", version = "0.0.0" }
zo-emitter = { path = "crates/compiler/zo-emitter", version = "0.0.0" }
zo-emitter-arm = { path = "crates/compiler/zo-emitter-arm", version = "0.0.0" }
zo-error = { path = "crates/compiler/zo-error", version = "0.0.0" }
zo-executor = { path = "crates/compiler/zo-executor", version = "0.0.0" }
zo-interner = { path = "crates/compiler/zo-interner", version = "0.0.0" }
zo-metrics = { path = "crates/compiler/zo-metrics", version = "0.0.0" }
zo-module-resolver = { path = "crates/compiler/zo-module-resolver", version = "0.0.0" }
zo-name-resolver = { path = "crates/compiler/zo-name-resolver", version = "0.0.0" }
zo-parser = { path = "crates/compiler/zo-parser", version = "0.0.0" }
zo-pp = { path = "crates/compiler/zo-pp", version = "0.0.0" }
zo-profiler = { path = "crates/compiler/zo-profiler", version = "0.0.0" }
zo-register-allocation = { path = "crates/compiler/zo-register-allocation", version = "0.0.0" }
zo-reporter = { path = "crates/compiler/zo-reporter", version = "0.0.0" }
zo-runtime = { path = "crates/compiler/zo-runtime", version = "0.0.0" }
zo-runtime-native = { path = "crates/compiler/zo-runtime-native", version = "0.0.0" }
zo-runtime-render = { path = "crates/compiler/zo-runtime-render", version = "0.0.0" }
zo-runtime-web = { path = "crates/compiler/zo-runtime-web", version = "0.0.0" }
zo-sir = { path = "crates/compiler/zo-sir", version = "0.0.0" }
zo-span = { path = "crates/compiler/zo-span", version = "0.0.0" }
zo-token = { path = "crates/compiler/zo-token", version = "0.0.0" }
zo-tokenizer = { path = "crates/compiler/zo-tokenizer", version = "0.0.0" }
zo-tree = { path = "crates/compiler/zo-tree", version = "0.0.0" }
zo-ty = { path = "crates/compiler/zo-ty", version = "0.0.0" }
zo-ty-checker = { path = "crates/compiler/zo-ty-checker", version = "0.0.0" }
zo-ty-state = { path = "crates/compiler/zo-ty-state", version = "0.0.0" }
zo-template-optimizer = { path = "crates/compiler/zo-template-optimizer", version = "0.0.0" }
zo-ui-protocol = { path = "crates/compiler/zo-ui-protocol", version = "0.0.0" }
zo-value = { path = "crates/compiler/zo-value", version = "0.0.0" }
zo-writer = { path = "crates/compiler/zo-writer", version = "0.0.0" }
zo-writer-macho = { path = "crates/compiler/zo-writer-macho", version = "0.0.0" }

# internal:crates:fret.
fret = { path = "crates/packager/fret", version = "0.0.0" }
fret-driver = { path = "crates/packager/fret-driver", version = "0.0.0" }
fret-parser = { path = "crates/packager/fret-parser", version = "0.0.0" }
fret-pipeline = { path = "crates/packager/fret-pipeline", version = "0.0.0" }
fret-tokenizer = { path = "crates/packager/fret-tokenizer", version = "0.0.0" }
fret-tokens = { path = "crates/packager/fret-tokens", version = "0.0.0" }
fret-types = { path = "crates/packager/fret-types", version = "0.0.0" }

# external:crates.
ammonia = "4.1.2"
anyhow = "1.0.102"
ariadne = "0.6.0"
# bevy = { version = "0.17.3", features = [
#   "bevy_asset",
#   "bevy_core_pipeline",
#   "bevy_render",
#   "bevy_sprite",
#   "bevy_winit",
#   "bevy_window",
#   "multi_threaded",
#   "x11",
# ] }
# bevy_ecs = "0.17.3"
calamine = "0.32.0"
clap = { version = "4.5.49", features = ["derive"] }
console_error_panic_hook = { version = "0.1.7" }
criterion = { version = "0.7.0", features = ["html_reports"] }
crossbeam = "0.8.4"
eframe = { version = "0.33.3", features = [
  "accesskit",
  "default_fonts",
  "persistence",
  "wgpu",
  "wayland",   # Linux
  "x11",       # Linux
] }
egui_extras = { version = "0.33.3", default-features = false, features = [
  "file",
  "image",
  "svg",
] }
egui_kittest = { version = "0.33.3", default-features = false, features = [
  "snapshot",
  # "wgpu",
]}
env_logger = "0.11.5"
fastrand = "2.3.0"
flume = { version = "0.11.1", default-features = true, features = ["async"] }
futures = "0.3.31"
gif = "0.14.0"
gilrs = "0.11.0"
glyphon = "0.9.0"
hashbrown = { version = "0.16.0",  default-features = true, features = [
  "rayon",
  "serde",
] }
js-sys = "0.3.81"
kanal = "0.1.1"
libm = "0.2.15"
lyon_geom = "1.0.17"
image = "0.25.6"
itoa = "1.0.15"
Inflector = "0.11.4"
insta = { version = "1.43.2", features = ["yaml"] }
lightningcss = { version = "1.0.0-alpha.68", features = ["visitor"] }
libc = "0.2.176"
libloading = "0.9.0"
log = "0.4.27"
noise = "0.9.0"
notify = "8.2.0"
num_cpus = "1.17.0"
objc = "0.2.7"
parking_lot = { version = "0.12.4", features = ["nightly"] }
pdfium-render = "0.8.37"
posthog-rs = "0.3.7"
profiling = "1.0.17"
proptest = "1.7.0"
puffin = "0.19.1"
puffin_http = "0.16.1"
pulldown-cmark = "0.13.0"
raw-window-handle = "0.6.2"
rayon = { version = "1.11.0" }
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = [
  "json",
  "multipart",
  "native-tls",
  "stream",
] }
resvg = "0.45.1"
rfd = "0.13"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
smallvec = { version = "1.13.2", features = ["const_new", "serde"] }
smol_str = { version = "0.3.2", features = ["serde"] }
sysinfo = "0.37.2"
tempfile = "3.23.0"
thin-vec = "0.2.14"
tokio = { version = "1.47.1", default-features = true , features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
] }
toml = "0.8.15"
tree-sitter = "0.25.10"
tree-sitter-language = "0.1.6"
usvg = "0.45.1"
uuid = { version = "1.17.0", features = ["serde", "v4", "v7"] }
walkdir = "2.5.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wasmi = "0.51.1"
web-sys = { version = "0.3.81", features = [
  "Comment",
  "console",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "Event",
  "EventListener",
  "EventTarget",
  "HtmlCollection",
  "HtmlElement",
  "HtmlHeadElement",
  "HtmlInputElement",
  "InputEvent",
  "KeyboardEvent",
  "MouseEvent",
  "Node",
  "NodeList",
  "Performance",
  "Response",
  "Text",
  "Window",
] }
wide = { version = "0.8.1", features = ["serde"] }
winit = "0.30.13"
wry = "0.53.5"
zmij = "1.0.7"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
