[workspace]
members = [
  "sources/tweener/eazy",
  "sources/tweener/eazy-examples/*",
  "sources/crafter/swisskit",
  "sources/sitter/tree-sitter-zo",
  "crates/compiler/zo",
  "crates/compiler/zo-benches",
  "crates/compiler/zo-binder",
  "crates/compiler/zo-test-runner",
  "crates/compiler/zo-lsp",
  "crates/packager/fret",
]

default-members = [
  "crates/compiler/zo",
  "crates/compiler/zo-benches",
  "crates/compiler/zo-lsp",
  "crates/compiler/zo-test-runner",
  "crates/packager/fret",
]

exclude = [
  "/.github/*",
  ".todo.md",
]

resolver = '2'

[workspace.package]
authors = ["the compilords team"]
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/invisageable/zo"
version = "0.4.0"

[workspace.dependencies]
# internal:sources:swisskit.
swisskit = { path = "sources/crafter/swisskit", version = "0.0.0" }
swisskit-core = { path = "sources/crafter/swisskit-core", version = "0.0.0" }
swisskit-renderer = { path = "sources/crafter/swisskit-renderer", version = "0.0.0" }
swisskit-span = { path = "sources/crafter/swisskit-span", version = "0.0.0" }

# internal:sources:eazy.
eazy = { path = "sources/tweener/eazy", version = "0.0.2" }
# eazy-bevy = { path = "sources/tweener/eazy-bevy", version = "0.0.0" }
eazy-core = { path = "sources/tweener/eazy-core", version = "0.0.2" }
eazy-derive = { path = "sources/tweener/eazy-derive", version = "0.0.2" }
eazy-keyframe = { path = "sources/tweener/eazy-keyframe", version = "0.0.2" }
eazy-tweener = { path = "sources/tweener/eazy-tweener", version = "0.0.2" }
eazy-wasm = { path = "sources/tweener/eazy-wasm", version = "0.0.0" }

# internal:sources:sitter.
tree-sitter-zo = { path = "sources/sitter/tree-sitter-zo", version = "0.0.0" }

# internal:crates:zo.
zo = { path = "crates/compiler/zo", version = "0.4.0" }
zo-analyzer = { path = "crates/compiler/zo-analyzer", version = "0.4.0" }
zo-benches = { path = "crates/compiler/zo-benches", version = "0.4.0" }
zo-binder = { path = "crates/compiler/zo-binder", version = "0.4.0" }
zo-buffer = { path = "crates/compiler/zo-buffer", version = "0.4.0" }
zo-bundler = { path = "crates/compiler/zo-bundler", version = "0.4.0" }
zo-checker = { path = "crates/compiler/zo-checker", version = "0.4.0" }
zo-c-abi = { path = "crates/compiler/zo-c-abi", version = "0.4.0" }
zo-codegen = { path = "crates/compiler/zo-codegen", version = "0.4.0" }
zo-codegen-arm = { path = "crates/compiler/zo-codegen-arm", version = "0.4.0" }
zo-codegen-backend = { path = "crates/compiler/zo-codegen-backend", version = "0.4.0" }
zo-codegen-clif = { path = "crates/compiler/zo-codegen-clif", version = "0.4.0" }
zo-codegen-web = { path = "crates/compiler/zo-codegen-web", version = "0.4.0" }
zo-codegen-x86 = { path = "crates/compiler/zo-codegen-x86", version = "0.3.11" }
zo-compiler = { path = "crates/compiler/zo-compiler", version = "0.4.0" }
zo-constant-folding = { path = "crates/compiler/zo-constant-folding", version = "0.4.0" }
zo-constant-propagation = { path = "crates/compiler/zo-constant-propagation", version = "0.4.0" }
zo-dce = { path = "crates/compiler/zo-dce", version = "0.4.0" }
zo-driver = { path = "crates/compiler/zo-driver", version = "0.4.0" }
zo-ecs = { path = "crates/compiler/zo-ecs", version = "0.4.0" }
zo-emitter = { path = "crates/compiler/zo-emitter", version = "0.4.0" }
zo-emitter-arm = { path = "crates/compiler/zo-emitter-arm", version = "0.4.0" }
zo-emitter-x86 = { path = "crates/compiler/zo-emitter-x86", version = "0.3.11" }
zo-error = { path = "crates/compiler/zo-error", version = "0.4.0" }
zo-executor = { path = "crates/compiler/zo-executor", version = "0.4.0" }
zo-abi = { path = "crates/compiler/zo-abi", version = "0.4.0" }
zo-host-paths = { path = "crates/compiler/zo-host-paths", version = "0.4.0" }
zo-interner = { path = "crates/compiler/zo-interner", version = "0.4.0" }
zo-linker = { path = "crates/compiler/zo-linker", version = "0.4.0" }
zo-lsp = { path = "crates/compiler/zo-lsp", version = "0.4.0" }
zo-liveness = { path = "crates/compiler/zo-liveness", version = "0.4.0" }
zo-metrics = { path = "crates/compiler/zo-metrics", version = "0.1.0" }
zo-misato = { path = "crates/compiler/zo-misato", version = "0.4.0" }
zo-module-resolver = { path = "crates/compiler/zo-module-resolver", version = "0.4.0" }
zo-name-resolver = { path = "crates/compiler/zo-name-resolver", version = "0.1.0" }
zo-ownership = { path = "crates/compiler/zo-ownership", version = "0.4.0" }
zo-parser = { path = "crates/compiler/zo-parser", version = "0.4.0" }
zo-pp = { path = "crates/compiler/zo-pp", version = "0.4.0" }
zo-profiler = { path = "crates/compiler/zo-profiler", version = "0.4.0" }
zo-register-allocation = { path = "crates/compiler/zo-register-allocation", version = "0.4.0" }
zo-reporter = { path = "crates/compiler/zo-reporter", version = "0.4.0" }
zo-runtime = { path = "crates/compiler/zo-runtime", version = "0.4.0" }
zo-runtime-ios = { path = "crates/compiler/zo-runtime-ios", version = "0.4.0" }
zo-runtime-native = { path = "crates/compiler/zo-runtime-native", version = "0.4.0" }
zo-runtime-render = { path = "crates/compiler/zo-runtime-render", version = "0.4.0" }
zo-runtime-web = { path = "crates/compiler/zo-runtime-web", version = "0.4.0" }
zo-provider-json = { path = "crates/compiler/zo-provider-json", version = "0.4.0" }
zo-provider-raylib = { path = "crates/compiler/zo-provider-raylib", version = "0.4.0" }
zo-provider-sqlite = { path = "crates/compiler/zo-provider-sqlite", version = "0.4.0" }
zo-sir = { path = "crates/compiler/zo-sir", version = "0.4.0" }
zo-session = { path = "crates/compiler/zo-session", version = "0.4.0" }
zo-span = { path = "crates/compiler/zo-span", version = "0.4.0" }
zo-token = { path = "crates/compiler/zo-token", version = "0.4.0" }
zo-tokenizer = { path = "crates/compiler/zo-tokenizer", version = "0.4.0" }
zo-tree = { path = "crates/compiler/zo-tree", version = "0.4.0" }
zo-ty = { path = "crates/compiler/zo-ty", version = "0.4.0" }
zo-ty-checker = { path = "crates/compiler/zo-ty-checker", version = "0.4.0" }
zo-ty-state = { path = "crates/compiler/zo-ty-state", version = "0.4.0" }
zo-styler = { path = "crates/compiler/zo-styler", version = "0.4.0" }
zo-template-optimizer = { path = "crates/compiler/zo-template-optimizer", version = "0.4.0" }
zo-test-runner = { path = "crates/compiler/zo-test-runner", version = "0.4.0" }
zo-ui-protocol = { path = "crates/compiler/zo-ui-protocol", version = "0.4.0" }
zo-value = { path = "crates/compiler/zo-value", version = "0.4.0" }
zo-writer = { path = "crates/compiler/zo-writer", version = "0.4.0" }
zo-writer-macho = { path = "crates/compiler/zo-writer-macho", version = "0.4.0" }

# internal:crates:fret.
fret = { path = "crates/packager/fret", version = "0.4.0" }
fret-driver = { path = "crates/packager/fret-driver", version = "0.4.0" }
fret-parser = { path = "crates/packager/fret-parser", version = "0.4.0" }
fret-pipeline = { path = "crates/packager/fret-pipeline", version = "0.4.0" }
fret-tokenizer = { path = "crates/packager/fret-tokenizer", version = "0.4.0" }
fret-tokens = { path = "crates/packager/fret-tokens", version = "0.4.0" }
fret-types = { path = "crates/packager/fret-types", version = "0.4.0" }

# external:crates.
ammonia = "4.1.2"
anyhow = "1.0.102"
ariadne = "0.6.0"
base64 = "0.22.1"
brotli = "8.0.2"
calamine = "0.32.0"
chrono = "0.4.44"
clap = { version = "4.5.49", features = ["derive"] }
console_error_panic_hook = { version = "0.1.7" }
cranelift = "0.130.1"
cranelift-codegen = { version = "0.130.1", features = ["x86", "arm64"] }
cranelift-module = "0.130.1"
cranelift-jit = "0.130.1"
cranelift-native = "0.130.1"
cranelift-object = "0.130.1"
criterion = { version = "0.7.0", features = ["html_reports"] }
crossbeam = "0.8.4"
eframe = { version = "0.34.1", features = [
  "accesskit",
  "default_fonts",
  "persistence",
  "wgpu",
  "wayland",   # Linux
  "x11",       # Linux
] }
egui_extras = { version = "0.34.1", default-features = false, features = [
  "file",
  "image",
  "svg",
] }
egui_kittest = { version = "0.34.1", default-features = false, features = [
  "snapshot",
  # "wgpu",
]}
env_logger = "0.11.5"
fastrand = "2.3.0"
flume = { version = "0.11.1", default-features = true, features = ["async"] }
futures = "0.3.31"
gif = "0.14.0"
gilrs = "0.11.1"
glyphon = "0.9.0"
hashbrown = { version = "0.16.0",  default-features = true, features = [
  "rayon",
  "serde",
] }
js-sys = "0.3.81"
kanal = "0.1.1"
libm = "0.2.15"
libzstd-rs-sys = "0.0.0"
lyon_geom = "1.0.17"
image = { version = "0.25.10", default-features = false, features = [
  "jpeg",
  "png",
  "gif",
  "webp",
] }
indoc = "2.0.7"
itoa = "1.0.18"
Inflector = "0.11.4"
insta = { version = "1.47.2", features = ["yaml"] }
lightningcss = { version = "1.0.0-alpha.71", features = ["visitor"] }
libc = "0.2.176"
libloading = "0.9.0"
log = "0.4.29"
noise = "0.9.0"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
objc2 = "0.6"
objc2-core-foundation = { version = "0.3", features = ["objc2", "CFCGTypes"] }
objc2-foundation = { version = "0.3", features = [
  "NSString",
  "NSArray",
  "NSObject",
  "NSDictionary",
  "NSGeometry",
  "NSProcessInfo",
  "NSData",
  "NSBundle",
] }
objc2-ui-kit = { version = "0.3", features = [
  "UIApplication",
  "UIResponder",
  "UIWindow",
  "UIView",
  "UIViewController",
  "UIControl",
  "UIButton",
  "UILabel",
  "UITextField",
  "UIScene",
  "UIWindowScene",
  "UISceneOptions",
  "UISceneSession",
  "UIScreen",
  "UIColor",
  "UIGeometry",
  "UIFont",
  "UIVisualEffect",
  "UIVisualEffectView",
  "UIGlassEffect",
  "UIButtonConfiguration",
  "UIImage",
  "UIImageView",
  "objc2-core-foundation",
  "objc2-quartz-core",
  "objc2-core-graphics",
] }
# The glass panel's specular rim is drawn on the effect view's
# `CALayer` (`setBorderColor` takes a `CGColor`), so quartz-core needs
# its `objc2-core-graphics` feature — `objc2-ui-kit` pulls quartz-core
# but only with default features, so enable it here for the whole graph.
objc2-quartz-core = { version = "0.3", features = [
  "CALayer",
  "objc2-core-graphics",
] }
num_cpus = "1.17.0"
parking_lot = { version = "0.12.5", features = ["nightly"] }
pdfium-render = "0.9.0"
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }
posthog-rs = "0.6.0"
profiling = "1.0.17"
proptest = "1.11.0"
pulldown-cmark = "0.13.3"
quote = "1.0.45"
raw-window-handle = "0.6.2"
raylib = "5.5.1"
rayon = { version = "1.12.0" }
regex = "1.12.2"
reqwest = { version = "0.13.3", default-features = false, features = [
  "json",
  "multipart",
  "native-tls",
  "stream",
] }
resvg = "0.47.0"
rfd = "0.17.2"
rusqlite = { version = "0.32", features = ["bundled"] }
rustc-hash = "2.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
sha1 = "0.10.6"
sha2 = { version = "0.10.9" }
smallvec = { version = "1.15.1", features = ["const_new", "serde"] }
smol_str = { version = "0.3.6", features = ["serde"] }
syn = { version = "2.0", features = ["full"] }
sysinfo = "0.39.2"
taffy = { version = "0.8", default-features = false, features = [
  "std",
  "taffy_tree",
  "flexbox",
] }
target-lexicon = "0.13.5"
tempfile = "3.27.0"
thin-vec = "0.2.18"
tokio = { version = "1.52.1", default-features = true , features = [
  "fs",
  "io-std",
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
] }
toml = "1.1.2+spec-1.1.0"
tower-lsp = "0.20.0"
tree-sitter = "0.26.8"
tree-sitter-language = "0.1.7"
ureq = "3.3.0"
usvg = "0.45.1"
uuid = { version = "1.23.1", features = ["serde", "v4", "v7"] }
walkdir = "2.5.0"
wasm-bindgen = "0.2.120"
wasm-bindgen-futures = "0.4.70"
wasmi = "1.0.9"
web-sys = { version = "0.3.97", features = [
  "Comment",
  "console",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "Event",
  "EventListener",
  "EventTarget",
  "HtmlCollection",
  "HtmlElement",
  "HtmlHeadElement",
  "HtmlInputElement",
  "InputEvent",
  "KeyboardEvent",
  "MouseEvent",
  "Node",
  "NodeList",
  "Performance",
  "Response",
  "Text",
  "Window",
] }
wide = { version = "1.4.0", features = ["serde"] }
winit = "0.30.13"
wry = "0.55.0"
zmij = "1.0.21"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
