[package]
name = "zo-core"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true

ariadne = { workspace = true }
hashbrown = { workspace = true }
Inflector = { workspace = true }
kanal = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
smol_str = { workspace = true }
sysinfo = { workspace = true }
