[package]
name = "zo-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
crossbeam-channel = []
flume = []
kanal = []

[dependencies]
anyhow.workspace = true
ariadne = { workspace = true }
crossbeam-channel = { workspace = true }
flume = { workspace = true }
hashbrown = { workspace = true }
itoa = { workspace = true }
kanal = { workspace = true }
ryu = { workspace = true }
smol_str = { workspace = true }
sysinfo = { workspace = true }
