[package]
name = "zhyr-driver"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[lib]
doctest = false
test = false

[dependencies]
zhyr-booster = { workspace = true }
zhoo-session = { workspace = true }

zo-core = { workspace = true }

clap = { workspace = true }
smol_str = { workspace = true }
