[package]
name = "zo-analyzer"
version.workspace = true
edition.workspace = true

[dependencies]
# internal:source.
swisskit = { workspace = true }

# internal:crates.
zo-ast = { workspace = true }
zo-hir = { workspace = true }
zo-inferencer = { workspace = true }
zo-interner = { workspace = true }
zo-reporter = { workspace = true }
zo-session = { workspace = true }

# external:crates.
