[package]
name = "zo-compiler"
version.workspace = true
edition.workspace = true

[dependencies]
# internal:source.
swisskit = { workspace = true }

# internal:crates.
zo-analyzer = { workspace = true }
zo-ast = { workspace = true }
zo-builder = { workspace = true }
zo-codegen = { workspace = true }
zo-interner = { workspace = true }
zo-interpreter = { workspace = true }
zo-packer = { workspace = true }
zo-parser = { workspace = true }
zo-reader = { workspace = true }
zo-reporter = { workspace = true }
zo-session = { workspace = true }
zo-tokenizer = { workspace = true }
zo-value = { workspace = true }

# external:crates.
flume = { workspace = true }
smol_str = { workspace = true }
