[package]
name = "zo-parser"
version.workspace = true
edition.workspace = true

[dependencies]
# internal:source.
swisskit = { workspace = true }

# internal:crates.
zo-ast = { workspace = true }
zo-interner = { workspace = true }
zo-reporter = { workspace = true }
zo-session = { workspace = true }
zo-tokenizer = { workspace = true }
zo-ty = { workspace = true }

# external:crates.
smol_str = { workspace = true }
thin-vec = { workspace = true }
