[package]
name = "zor-tokenizer"
version.workspace = true
edition.workspace = true

[dependencies]
# internal:sources.
swisskit = { workspace = true }

# internal:crates.
zor-interner = { workspace = true }
zor-reporter = { workspace = true }
zor-session = { workspace = true }
zor-token = { workspace = true }

# external:crates.
