[package]
name = "zhoo-analyzer"
license.workspace = true
edition.workspace = true

[dependencies]
zhoo-ast = { workspace = true }
zhoo-hir = { workspace = true }
zhoo-inferencer = { workspace = true }
zhoo-session = { workspace = true }
zhoo-ty = { workspace = true }
zhoo-tychecker = { workspace = true }

zo-core = { workspace = true }
