[package]
name = "zhoo-ast"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[lib]
doctest = false

[dependencies]
zhoo-session = { workspace = true }
zhoo-tokenizer = { workspace = true }
zhoo-ty = { workspace = true }

zo-core = { workspace = true }

hashbrown = { workspace = true }
