[package]
name = "zhoo-codegen-clif"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
zhoo-ast = { workspace = true }
zhoo-session = { workspace = true }
zhoo-ty = { workspace = true }

zo-core = { workspace = true }

cranelift = { workspace = true }
cranelift-codegen = { workspace = true }
cranelift-module = { workspace = true }
cranelift-native = { workspace = true }
cranelift-object = { workspace = true }
