[package]
name = "zhoo-codegen-llvm"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
zhoo-ast = { workspace = true }
zhoo-session = { workspace = true }
zhoo-ty = { workspace = true }

zo-core = { workspace = true }

inkwell = { workspace = true }
